--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,20 @@
-on: 
+name: Print Secret for Verification
+
+on:
   push:
     branches:
       - main
-name: Deploy website on push
-jobs:
-  web-deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - name: Get latest code
-      uses: actions/checkout@v3
 
-    - name: Use Node.js 16
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18'
-        
-    - name: Install Dependencies
-      run: npm install
-        
-    - name: Build Project
-      run: npm run build
-    
-    - name: Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      with:
-        server: ${{ secrets.FTP_SERVER }}
-        username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: build/
-        remote-dir: /public_html
+jobs:
+  print_secret:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Print Secret Value
+      env:
+        API_KEY: ${{ secrets.FTP_SERVER }}
+      run: |
+        echo "The value of MY_API_KEY secret is: $API_KEY"
