--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,5 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Print Secret Value
-      env:
-        API_KEY: ${{ secrets.FTP_SERVER }}
       run: |
-        echo "The value of MY_API_KEY secret is: $API_KEY"
+        echo ${{ env.FTP_SERVER }}
