--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install Dependencies
       run: npm install
 
-    - name: Install Dependencies
+    - name: Build
       run: npm run build
     
     - name: 📂 Upload to FTP Server
@@ -29,7 +29,7 @@ jobs:
         server: ${{ vars.FTP_SERVER }}
         username: ${{ vars.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: build
+        local-dir: /build
         remote-dir: /public_html
         exclude: |
           **/.git*
