--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,33 +2,21 @@ on:
   push:
     branches: 
       - main 
-<<<<<<< HEAD
     
-=======
->>>>>>> 57fa2cefd5f82f243f17a6985792943391e41440
 name: 🚀 Deploy website on push
 jobs:
   web-deploy:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
-<<<<<<< HEAD
       
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
   
-=======
-    
-    steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v3
-
->>>>>>> 57fa2cefd5f82f243f17a6985792943391e41440
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '18'
-<<<<<<< HEAD
           
     - name: Install Dependencies
       run: npm install
@@ -36,15 +24,6 @@ jobs:
     - name: Build
       run: npm run build
       
-=======
-        
-    - name: Install Dependencies
-      run: npm install
-
-    - name: Build
-      run: npm run build
-    
->>>>>>> 57fa2cefd5f82f243f17a6985792943391e41440
     - name: 📂 Upload to FTP Server
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
@@ -57,8 +36,42 @@ jobs:
           **/.git*
           **/.git*/**
           **/node_modules/**
-<<<<<<< HEAD
-  
-=======
-
->>>>>>> 57fa2cefd5f82f243f17a6985792943391e41440
+          on: 
+            push:
+              branches: 
+                - main 
+              
+          name: 🚀 Deploy website on push
+          jobs:
+            web-deploy:
+              name: 🎉 Deploy
+              runs-on: ubuntu-latest
+                
+              steps:
+              - name: 🚚 Get latest code
+                uses: actions/checkout@v3
+            
+              - name: Set up Node.js
+                uses: actions/setup-node@v3
+                with:
+                  node-version: '18'
+                    
+              - name: Install Dependencies
+                run: npm install
+            
+              - name: Build
+                run: npm run build
+                
+              - name: 📂 Upload to FTP Server
+                uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+                with:
+                  server: ${{ vars.FTP_SERVER }}
+                  username: ${{ vars.FTP_USERNAME }}
+                  password: ${{ secrets.FTP_PASSWORD }}
+                  local-dir: ./build/
+                  remote-dir: ./public_html/
+                  exclude: |
+                    **/.git*
+                    **/.git*/**
+                    **/node_modules/**
+            
