--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,51 +1,14 @@
-on: push
-name: 🚀 Deploy website on push
-jobs:
-  web-deploy:
-    name: 🎉 Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v3
-    
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      with:
-        server: ${{ vars.FTP_SERVER }}
-        username: ${{ vars.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        exclude: |
-          **/.git*
-          **/.git*/**
-          **/node_modules/**
-
-# on: 
-#   push:
-#     branches: 
-#       - main 
-    
+# on: push
 # name: 🚀 Deploy website on push
 # jobs:
 #   web-deploy:
 #     name: 🎉 Deploy
 #     runs-on: ubuntu-latest
-      
 #     steps:
 #     - name: 🚚 Get latest code
 #       uses: actions/checkout@v3
-  
-#     - name: Use Node.js 18
-#       uses: actions/setup-node@v3
-#       with:
-#         node-version: 18
-          
-#     - name: Install Dependencies
-#       run: npm install
-  
-#     - name: 🔨 Build Project
-#       run: npm run build
-      
-#     - name: 📂 Upload to FTP Server.
+    
+#     - name: 📂 Sync files
 #       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
 #       with:
 #         server: ${{ vars.FTP_SERVER }}
@@ -55,7 +18,44 @@ jobs:
 #           **/.git*
 #           **/.git*/**
 #           **/node_modules/**
-#           **/src/**
-#           .git*
-#           README*
-#           pack*
+
+on: 
+  push:
+    branches: 
+      - main 
+    
+name: 🚀 Deploy website on push
+jobs:
+  web-deploy:
+    name: 🎉 Deploy
+    runs-on: ubuntu-latest
+      
+    steps:
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v3
+  
+    - name: Use Node.js 18
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+          
+    - name: Install Dependencies
+      run: npm install
+  
+    - name: 🔨 Build Project
+      run: npm run build
+      
+    - name: 📂 Upload to FTP Server.
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      with:
+        server: ${{ vars.FTP_SERVER }}
+        username: ${{ vars.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        exclude: |
+          **/.git*
+          **/.git*/**
+          **/node_modules/**
+          **/src/**
+          .git*
+          README*
+          pack*
