exclude build folder

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,3 @@
-# on: push
-# name: 🚀 Deploy website on push
-# jobs:
-#   web-deploy:
-#     name: 🎉 Deploy
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: 🚚 Get latest code
-#       uses: actions/checkout@v3
-    
-#     - name: 📂 Sync files
-#       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-#       with:
-#         server: ${{ vars.FTP_SERVER }}
-#         username: ${{ vars.FTP_USERNAME }}
-#         password: ${{ secrets.FTP_PASSWORD }}
-#         exclude: |
-#           **/.git*
-#           **/.git*/**
-#           **/node_modules/**
-
 on: 
   push:
     branches: 
@@ -59,3 +38,4 @@ jobs:
           .git*
           README*
           pack*
+          build/
