--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
         server: ${{ vars.FTP_SERVER }}
         username: ${{ vars.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        source-directory: ./build/
-        target-directory: ./public_html/
+        local-dir: ./build/
+        server-dir: ./public_html/
         exclude: |
           **/.git*
           **/.git*/**
