--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         node-version: 18
           
-    - name: Install Dependencies
+    - name: Install Dependencies.
       run: npm install
   
     - name: 🔨 Build Project
