--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
   
     - name: 🔨 Build Project
       run: npm run build
+
+    # - name: Create build folder
+    #   run: cd build && mkdir build
       
     - name: 📂 Upload to FTP Server.
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
@@ -31,13 +34,12 @@ jobs:
         username: ${{ vars.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: build/
-        server-dir: public_html/
+        server-dir: public_html/www/
         exclude: |
           **/.git*
           **/.git*/**
           **/node_modules/**
           **/src/**
-          .git*
-          README*
+          *.md
           pack*
           
