--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,11 @@ jobs:
     - name: 🔨 Build Project
       run: npm run build
 
-    # - name: Create build folder
-    #   run: cd build && mkdir build
+    - name: Create build folder
+      run: cd build && mkdir build
       
     - name: 📂 Upload to FTP Server.
-      uses: ./ #SamKirkland/FTP-Deploy-Action@v4.3.4
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: ${{ vars.FTP_SERVER }}
         username: ${{ vars.FTP_USERNAME }}
