--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,9 +1,9 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /site01  # Cambia "subdirectory" por "landing"
+RewriteBase /landing/  
 RewriteRule ^index\.html$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-l
-RewriteRule . /site01/index.html [L]  # Cambia "/index.html" por "/site01/index.html"
+RewriteRule . /landing/index.html [L]  # Cambia "/index.html" por "/landing/index.html"
 </IfModule>
