--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
     - name: 🔨 Build Project
       run: npm run build
 
-    - name: Create build folder
-      run: cd build && mkdir build && cd ..
+    # - name: Create build folder
+    #   run: cd build && mkdir build && cd ..
       
     - name: 📂 Upload to FTP Server.
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
